# healthician

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: healthician.yml
Modules/Data/: CMakeLists.txt
Modules/Data/include/: Massage.h  Patient.h
Modules/Data/src/: Massage.cpp  Patient.cpp
Modules/Data/tests/: CMakeLists.txt  DataTests.cpp
Modules/Database/: CMakeLists.txt
Modules/Database/include/: DatabaseManager.h  IObject.h
Modules/Database/src/: database.cpp
Modules/Database/tests/: CMakeLists.txt  DatabaseTests.cpp
Modules/Login/include/: User.h
Modules/Login/tests/: LoginTests.cpp
apps/: healthician.cpp  savewindow.cpp
apps/include/: savewindow.h
apps/src/: savewindow.cpp
apps/ui/: savewindow.ui
cmake/: FindMYSQL.cmake
